--- a/Vanrise/Code/Vanrise.HelperTools/App.config
+++ b/Vanrise/Code/Vanrise.HelperTools/App.config
@@ -5,7 +5,7 @@
     </startup>
   <appSettings>
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
-    <add key="BCPTempFilesDirectory" value="D:\Test" />
+    <add key="BCPTempFilesDirectory" value="C:\Test" />
     <add key="VersionDateFormat" value="yyyy-MM-dd" />
     <add key="VersionNumber" value="1.9" />
     <add key="ServerIP" value="192.168.110.185"/>
