--- a/Vanrise/Code/Vanrise.GenericData.MainExtensions/Vanrise.GenericData.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.MainExtensions/Vanrise.GenericData.MainExtensions.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataRecordFieldFormulas\DateTimeRoundFieldFormula.cs" />
     <Compile Include="DataRecordFieldFormulas\NullToBooleanFieldFormula.cs" />
     <Compile Include="DataRecordFieldFormulas\ParentBusinessEntityFieldFormula.cs" />
     <Compile Include="DataRecordFields\FieldArrayType.cs" />
