--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/TOne.WhS.Analytics.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/TOne.WhS.Analytics.Web.csproj
@@ -206,6 +206,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="WhS_Analytics\Constant\RealeaseCodeAnalyticDimensionEnum.js" />
+    <Content Include="WhS_Analytics\Constant\BillingReportTypeEnum.js" />
+    <Content Include="WhS_Analytics\Directives\BillingReports\vr-whs-analytics-billingreporttype-selector.js" />
     <Content Include="WhS_Analytics\Directives\CallStatus\vr-whs-analytics-callstatus-selector.js" />
     <Content Include="WhS_Analytics\Directives\PhoneNumber\vr-whs-analytics-phonenumber-selector.js" />
     <Content Include="WhS_Analytics\Directives\ReleaseCodeStatistic\Templates\ReleaseCodeGridTemplate.html" />
