Implementing invoice setting for financial account
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42994

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -131,6 +131,8 @@
     <Compile Include="FinancialAccount\WHSFinancialAccountInfo.cs" />
     <Compile Include="FinancialAccount\WHSFinancialAccountInfoFilter.cs" />
     <Compile Include="FinancialAccount\WHSFinancialAccountQuery.cs" />
+    <Compile Include="FinancialAccount\WHSFinancialAccountRuntimeEditor.cs" />
+    <Compile Include="FinancialAccount\WHSFinancialAccountToAdd.cs" />
     <Compile Include="FinancialAccount\WHSFinancialAccountToEdit.cs" />
     <Compile Include="InvoiceSettings.cs" />
     <Compile Include="Enumerations.cs" />
