--- a/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
@@ -241,6 +241,7 @@
     <Content Include="VR_Invoice\Directives\InvoiceSetting\vr-invoice-invoicesetting-runtime-row.js" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\vr-invoice-invoicesetting-runtime-section.js" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\Templates\InvoiceSettingGridTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceSetting\vr-invoice-invoicesetting-selector.js" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\vr-invoicesetting-grid.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\AutomaticInvoiceAction\AutomaticInvoiceActionEditorController.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\AutomaticInvoiceAction\MainExtensions\EmailActionAttachmentSetEditorController.js" />
