--- a/Vanrise/Code/Vanrise.GenericData.MainExtensions/Vanrise.GenericData.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.MainExtensions/Vanrise.GenericData.MainExtensions.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DataRecordFieldFormulas\DateTimeRoundFieldFormula.cs" />
     <Compile Include="DataRecordFieldFormulas\NullToBooleanFieldFormula.cs" />
     <Compile Include="DataRecordFieldFormulas\ParentBusinessEntityFieldFormula.cs" />
+    <Compile Include="DataRecordFieldFormulas\SingleMathOperationFieldFormula.cs" />
     <Compile Include="DataRecordFields\FieldArrayType.cs" />
     <Compile Include="DataRecordFields\FieldTypeHelper.cs" />
     <Compile Include="DataRecordFields\Filters\BusinessEntityFieldTypeFilter.cs" />
