add RestoreStateBackupFilter class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43035

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -155,6 +155,7 @@
     <Compile Include="SaleRate\History\SaleRateHistoryQuery.cs" />
     <Compile Include="SaleRate\History\SaleRateHistoryRecord.cs" />
     <Compile Include="SaleRate\History\SellingProductZoneRates.cs" />
+    <Compile Include="StateBackup\Filters\RestoreStateBackupFilter.cs" />
     <Compile Include="StateBackup\StateBackupRestore.cs" />
     <Compile Include="SupplierZone\SupplierZoneServiceToClose.cs" />
     <Compile Include="SupplierZone\SupplierZoneServiceToEdit.cs" />
