--- a/Mediation/Code/Mediation.Generic.Entities/Mediation.Generic.Entities.csproj
+++ b/Mediation/Code/Mediation.Generic.Entities/Mediation.Generic.Entities.csproj
@@ -75,6 +75,7 @@
     <Compile Include="OutputHandlerExecutionEntity.cs" />
     <Compile Include="PreparedRecordsBatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionIdsBatch.cs" />
     <Compile Include="StatusMapping.cs" />
     <Compile Include="MediationRecords\MediationRecord.cs" />
     <Compile Include="MediationRecords\MediationRecordBatch.cs" />
