--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Entities/TOne.WhS.Invoice.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Entities/TOne.WhS.Invoice.Entities.csproj
@@ -55,6 +55,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SupplierGenerationCustomSectionPayload.cs" />
+    <Compile Include="CustomerGenerationCustomSectionPayload.cs" />
     <Compile Include="CustomerInvoiceDetails.cs" />
     <Compile Include="CustomerInvoiceItemDetails.cs" />
     <Compile Include="InvoiceComparisonInput.cs" />
