Implementing invoice file name parts
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43067

--- a/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
@@ -79,6 +79,8 @@
     <Compile Include="InvoiceDataSourceSettings\ItemGroupingDataSourceSettings.cs" />
     <Compile Include="InvoiceDataSourceSettings\LastInvoicesDataSourceSettings.cs" />
     <Compile Include="InvoiceDataSourceSettings\TaxesDataSourceSettings.cs" />
+    <Compile Include="InvoiceFileNamePart\InvoiceFieldFileNamePart.cs" />
+    <Compile Include="InvoiceFileNamePart\TimeFileNamePart.cs" />
     <Compile Include="InvoiceGeneratorActionFilter\InvoiceGeneratorActionFilterGroupCondition.cs" />
     <Compile Include="InvoiceActionSettings\LockInvoiceAction.cs" />
     <Compile Include="InvoiceActionSettings\RecreateInvoiceAction.cs" />
