--- a/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
@@ -226,12 +226,14 @@
     <Content Include="VR_Invoice\Directives\Extensions\VRObjectTypes\vr-invoice-invoiceobjecttype.js" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\Templates\AutomaticInvoiceActionsPartTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\Templates\InitialSequenceValuePartTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\Templates\FileNamePatternInvoiceSettingPartTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\Templates\SerialNumberPatternInvoiceSettingPartTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\Templates\BillingPeriodInvoiceSettingPartTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\Templates\AutomaticInvoiceSettingPartTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\Templates\DuePeriodPartTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\vr-invoice-invoicesetting-runtime-automaticinvoiceactionspart.js" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\vr-invoice-invoicesetting-runtime-initialsequencevaluepart.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\vr-invoice-invoicesetting-runtime-filenamepatterninvoicesettingpart.js" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\vr-invoice-invoicesetting-runtime-serialnumberpatterninvoicesettingpart.js" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\vr-invoice-invoicesetting-runtime-billingperiodinvoicesettingpart.js" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\vr-invoice-invoicesetting-runtime-automaticinvoicesettingpart.js" />
@@ -286,6 +288,17 @@
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\vr-invoicetype-datasourcesettings-taxes.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\vr-invoicetype-datasourcesettings-itemgrouping.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceExtendedSettings\vr-invoicetype-extendedsettings.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\MainExtensions\Templates\TimeFileNamePartTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\MainExtensions\Templates\InvoiceFieldFileNamePartTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\MainExtensions\vr-invoicetype-filename-time.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\MainExtensions\vr-invoicetype-filename-invoicefield.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\FileNamePartEditorController.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\FileNamePatternHelperController.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\Templates\FileNamePartEditor.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\Templates\FileNamePartsTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\Templates\FileNamePatternHelper.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\vr-invoicetype-filenameparts.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\vr-invoicetype-filename-pattern.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\FilterConditionItemEditorController.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\Templates\AccountActivationConditionTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\Templates\ConditionGroupTemplate.html" />
@@ -414,6 +427,7 @@
     <Content Include="VR_Invoice\Services\AutomaticInvoiceActionService.js" />
     <Content Include="VR_Invoice\Services\InvoiceAttachmentService.js" />
     <Content Include="VR_Invoice\Services\InvoiceActionService.js" />
+    <Content Include="VR_Invoice\Services\InvoiceFileNameSettingsService.js" />
     <Content Include="VR_Invoice\Services\InvoiceGeneratorActionService.js" />
     <Content Include="VR_Invoice\Services\InvoiceGridSettingService.js" />
     <Content Include="VR_Invoice\Services\InvoiceGroupingItemService.js" />
