Update Excel Manager add Input to context, Update Utility Data Manager add Getdatetimemanager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43069

--- a/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
+++ b/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
@@ -72,6 +72,7 @@
     <Compile Include="ComponentType\VRComponentTypeManager.cs" />
     <Compile Include="ComponentType\VRComponentTypeOverriddenConfiguration.cs" />
     <Compile Include="ConfigManager.cs" />
+    <Compile Include="UtilityManager.cs" />
     <Compile Include="Filters\GenericLKUPBEDefinitionFilter.cs" />
     <Compile Include="GenericLKUP\GenericLKUPBEDefinitionSettings.cs" />
     <Compile Include="GenericLKUP\GenericLKUPDefinitionManager.cs" />
