--- a/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
@@ -55,6 +55,7 @@
     <Compile Include="VRActionAuditDataManager.cs" />
     <Compile Include="VRActionAuditLKUPDataManager.cs" />
     <Compile Include="VRApplicationVisibilityDataManager.cs" />
+    <Compile Include="UtilityDataManager.cs" />
     <Compile Include="VRConnectionDataManager.cs" />
     <Compile Include="VRComponentTypeDataManager.cs" />
     <Compile Include="VREventHandlerDataManager.cs" />
