Bug 4198 Add Mediation Definition Name
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43075

--- a/Mediation/Code/Mediation.Generic.BP.Arguments/Mediation.Generic.BP.Arguments.csproj
+++ b/Mediation/Code/Mediation.Generic.BP.Arguments/Mediation.Generic.BP.Arguments.csproj
@@ -44,10 +44,19 @@
     <Reference Include="Vanrise.BusinessProcess.Entities">
       <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Common">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MediationProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Mediation.Generic.Entities\Mediation.Generic.Entities.csproj">
+      <Project>{edbd3a6e-4535-4b84-8c2a-2ae6aedf5005}</Project>
+      <Name>Mediation.Generic.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
