--- a/Mediation/Code/Mediation.Generic.Entities/Mediation.Generic.Entities.csproj
+++ b/Mediation/Code/Mediation.Generic.Entities/Mediation.Generic.Entities.csproj
@@ -44,6 +44,10 @@
     <Reference Include="Vanrise.BusinessProcess">
       <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Data, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Data.dll</HintPath>
@@ -64,6 +68,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enumerations.cs" />
+    <Compile Include="Managers\IMediationDefinitionManager.cs" />
+    <Compile Include="Managers\IMediationManager.cs" />
     <Compile Include="IMediationProcessContext.cs" />
     <Compile Include="MediationDefinition\MediationDefinition.cs" />
     <Compile Include="MediationDefinition\MediationDefinitionDetail.cs" />
@@ -71,6 +77,7 @@
     <Compile Include="MediationDefinition\MediationDefinitionQuery.cs" />
     <Compile Include="MediationDefinition\MediationOutputHandler.cs" />
     <Compile Include="MediationDefinition\MediationOutputHandlerConfig.cs" />
+    <Compile Include="Managers\MediationManagerFactory.cs" />
     <Compile Include="MultiLegSessionIdEntity.cs" />
     <Compile Include="OutputHandlerExecutionEntity.cs" />
     <Compile Include="PreparedRecordsBatch.cs" />
