Refactoring record search parameters
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43093

--- a/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
@@ -149,6 +149,7 @@
     <Compile Include="DimensionValue.cs" />
     <Compile Include="MeasureStyleRuleTemplate.cs" />
     <Compile Include="DataAnalysis\Common\TimeRangeFilter.cs" />
+    <Compile Include="RecordSearchFieldFilterInput.cs" />
     <Compile Include="RecordSearchFilterGroupInput.cs" />
     <Compile Include="StyleRule.cs" />
     <Compile Include="MeasureValues.cs" />
