--- a/Vanrise/Code/Vanrise.GenericData.MainExtensions/Vanrise.GenericData.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.MainExtensions/Vanrise.GenericData.MainExtensions.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DataRecordFieldFormulas\ParentBusinessEntityFieldFormula.cs" />
     <Compile Include="DataRecordFieldFormulas\SingleMathOperationFieldFormula.cs" />
     <Compile Include="DataRecordFields\FieldArrayType.cs" />
+    <Compile Include="DataRecordFields\FieldDictionaryType.cs" />
     <Compile Include="DataRecordFields\FieldTypeHelper.cs" />
     <Compile Include="DataRecordFields\Filters\BusinessEntityFieldTypeFilter.cs" />
     <Compile Include="DataRecordFields\Filters\ChoicesFieldTypeFilter.cs" />
