--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.MainExtensions/TOne.WhS.BusinessEntity.MainExtensions.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.MainExtensions/TOne.WhS.BusinessEntity.MainExtensions.csproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <Compile Include="CodeCriteriaGroups\SelectiveCodeCriteriaGroup.cs" />
     <Compile Include="CustomerGroups\SelectiveCustomerGroup.cs" />
+    <Compile Include="DataRecordFieldFormulas\GatewayEvaluatorFieldFormula.cs" />
     <Compile Include="FinancialAccountTypes\CustomerPostpaid\CustomerPostpaidDefinitionSettings.cs" />
     <Compile Include="FinancialAccountTypes\CustomerPostpaid\CustomerPostpaidSettings.cs" />
     <Compile Include="FinancialAccountTypes\CustomerPrepaid\CustomerPrepaidDefinitionSettings.cs" />
