--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -287,6 +287,8 @@
     <Content Include="WhS_BusinessEntity\Directives\FlaggedService\vr-whs-be-flaggedservice-selector.js" />
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\CustomerGroup\Templates\CustomerGroupTemplate.html" />
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\CustomerGroup\vr-whs-be-customergroup.js" />
+    <Content Include="WhS_BusinessEntity\Directives\MainExtensions\DataRecordFieldFormulas\Templates\GatewayEvaluatorFieldFormulaTemplate.html" />
+    <Content Include="WhS_BusinessEntity\Directives\MainExtensions\DataRecordFieldFormulas\vr-whs-be-datarecordtypefields-formula-gatewayevaluator.js" />
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\MappingSteps\GetCDPNsForIdentification\Templates\GetCDPNsForIdentificationStepPreviewTemplate.html" />
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\MappingSteps\GetCDPNsForIdentification\Templates\GetCDPNsForIdentificationStepTemplate.html" />
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\MappingSteps\GetCDPNsForIdentification\vr-whs-be-getcdpnsforidentificationstep-preview.js" />
